kubernetes/osticket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osticket
  namespace: osticket
  labels:
    app: osticket
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: osticket
